# Double_HPGe_Geant4

./: .gitignore  AGENTS.md  CASCADE_INTEGRATION_STATUS.md  CASCADE_TEST_RESULTS.md  CL36_PAPER_INTRO_CONTEXT.md  CL36_SIMULATION_PAPER_OUTLINE.md  CLAUDE.md  CMakeLists.txt  CR54_CASCADE_RESULTS.md  Double_HPGe_Geant4_Paper.docx  G4History.macro  HPGeDual.cc  PHASE2_COMPLETE.md  TXTtoJSON.py  cascade_cl36.mac  cascade_cr54.mac  config_cascade.sh  cr54_level.txt  cr54_levels.json  crosssection_examples.md  gamma_pair_enumerate.txt  single_9_718_100k.mac  test_mt.mac  vis_crosssection.mac
include/: ActionInitialization.hh  G4CASCADE.hh  PrimaryGeneratorAction.hh
src/: ActionInitialization.cc  G4CASCADE.cc  G4RDAugerData.cc  PrimaryGeneratorAction.cc  SteppingAction.cc
